#6 회원정보 수정, 삭제 api 요청 응답확인 완료

--- a/src/pages/admin/auth/AuthManager.module.css
+++ b/src/pages/admin/auth/AuthManager.module.css
@@ -23,13 +23,29 @@
     border-bottom: 1px lightgray solid;
 }
 
+.Category{
+    font-size: 18px;
+    cursor: pointer;
+
+}
+
 .AuthCategoryBox > div {
     padding: 10px 20px;
 }
 
 
 .AuthUserBox > div {
-    padding: 20px;
+    padding: 10px;
+}
+
+.AuthUserBox th {
+    border-top: gray solid 1px;
+    border-bottom: gray solid 1px;
+}
+
+.AuthUserBox td {
+    font-size: 18px;
+    border-bottom: gray dashed 1px;
 }
 
 
@@ -46,6 +62,7 @@
     /* margin: ; */
 }
 
+
 .settingList {
     height: 100px;
     display: grid;
@@ -54,3 +71,54 @@
     align-items: center;
     
 }
+
+
+/* 모달의 뒷 배경 */
+.ModalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* 배경 불투명도 설정 */
+    display: flex;
+    justify-content: center; /* 수평 중앙 정렬 */
+    align-items: center; /* 수직 중앙 정렬 */
+    z-index: 1000; /* 모달을 다른 요소 위로 표시 */
+    overflow-y: auto; /* 세로 스크롤이 생길 경우 배경도 스크롤 가능하도록 설정 */
+}
+
+/* 모달 컨테이너 */
+.Modal {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* 그림자 효과 */
+    position: relative;
+    z-index: 1001; /* 모달을 뒷 배경보다 위에 표시 */
+    max-height: 80%; /* 모달 내용의 최대 높이를 설정 */
+    overflow-y: auto; /* 세로 스크롤이 생길 경우 모달 내용을 스크롤 가능하도록 설정 */
+}
+  
+  /* 모달 닫기 버튼 */
+  .CloseButton {
+    position: sticky;
+    top: 5px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 24px;
+    color: #333;
+    display: flex;
+    justify-content: flex-end; /* 오른쪽 정렬 */
+
+  }
+
+  .modalCompleteBtn {
+    width: 100px !important;
+    background: red ;
+  }
+
+  .modalCompleteBtn:hover {
+    width: 100px !important;
+    background: #FFC338 ;
+  }
