--- a/src/pages/bulletin/Comment.css
+++ b/src/pages/bulletin/Comment.css
@@ -1,20 +1,20 @@
 .comment_mod{
-    font-size: 20px;
+  font-size: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
-    width : 400px;
+    width: 80%;
     min-height: 40px;
     padding-top: 0px;
     padding-bottom: 0px;
-    background-color: #f4f4f4;
+    background-color: white;
     resize: none;
   }
 
   .comment_detail{
-    font-size: 20px;
+    font-size: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
-    width : 400px;
+    width: 80%;
     min-height: 40px;
     padding-top: 0px;
     padding-bottom: 0px;
