--- a/src/pages/approval/Hrm/ApprovalHrm.css
+++ b/src/pages/approval/Hrm/ApprovalHrm.css
@@ -49,7 +49,7 @@
     grid-column: 1 / span 8;
     padding: 30px;
     min-height: 500px;
-    width: 100%;
+    /* width: 100%; */
 }
 .apvContentDetailComent2{
     grid-column: 1 / span 8;
