--- a/src/pages/bulletin/Bullentin.module.css
+++ b/src/pages/bulletin/Bullentin.module.css
@@ -1,6 +1,6 @@
 .content_bullentin_main{
     
-    width:100vw;
+    width:80vw;
     font-size: 20px;
 }
 .main_catagory{
@@ -18,6 +18,17 @@
 }
 .comment_content{
   font-size: 16px;
+}
+.add_content input{
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 3px solid black;
+  background-color:  #f4f4f4;
+}
+.content_time input{
+  width: 20px;
+
 }
 .comment{
   margin-top: 10px;
@@ -120,6 +131,10 @@
     text-align: left;   
     color: black;
     /* border-bottom: 1px solid #000; */
+}
+
+.content_title input{
+  width: 20x;
 }
 table{
     width: 100%;
@@ -245,24 +260,41 @@ td{
     justify-content: center;
     margin-left: 5px;
     margin-top: 50px;
+   
   }
   .step div{
     text-align: center;
   }
   .step div h3{
-    
     border: 1px solid #000;
     width: 300px;
     height: 50px;
     text-align: center;
     padding-top: 25px;
     margin-bottom: 0px;
+    border-top-right-radius: 6%;  
+    border-top-left-radius: 6%;  
   }
   .step_1_content,.step_2_content,#step-3-content,.abcdefg{
     min-height: 400px;
     min-width: 300xpx;
     border: 1px solid #000;
+
   }
+  /* .step_1_content ul li:hover{
+    background: #00b6c2;
+    color: white;
+    cursor: pointer;
+  } */
+  .step_2{
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  /* .step_2 ul li:hover{
+    background: #00b6c2;
+    color: white;
+    cursor: pointer;
+  } */
   .step_3{
     min-width: 400px;
   }
@@ -277,6 +309,11 @@ li{
   list-style-type: none;
   text-align: center;
   margin-bottom: 10px;
+  font-weight: 800;
+}
+.step_1 h3,.step_2 h3,.step_3 h3{
+  background: #10479A;
+  color: #FFF;
 }
 ul{
   padding: 0;
@@ -307,6 +344,7 @@ ul{
 .button_list{
   float:right;
   margin-right: 50px;
+  margin-top: 150px;
 }
 
 .apply_content{
