--- a/src/pages/approval/Approval.css
+++ b/src/pages/approval/Approval.css
@@ -166,6 +166,47 @@ section {
     border: solid 1px;
 }
 
+.apvMainBox1 {
+    display: flex;
+    /* margin-left: 40px; */
+    justify-content: space-around
+}
+
+.apvMainBox2 {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    border-radius: 6px;
+    border: 3px solid #10479A;
+    width: 150px;
+    height: 150px;
+    padding: 10px 12px;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.apvMainBox2 .row1 {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 80px;
+    width: 150px;
+    font-size: 20px;
+    font-weight: 500;
+    border-bottom: 2px solid #10479A;
+}
+
+.apvMainBox2 .row2 {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100px;
+    width: 150px;
+    font-size: 20px;
+}
+
 .apvMainBoxRightBox {
     display: flex;
 }
