#17 권한분류 카테고리, 매니저목록 조회, 매니저 추가 기능 api 요청완료

--- a/src/pages/admin/auth/AuthManager.module.css
+++ b/src/pages/admin/auth/AuthManager.module.css
@@ -39,13 +39,12 @@
 }
 
 .AuthUserBox th {
-    border-top: gray solid 1px;
-    border-bottom: gray solid 1px;
+    border: none;
 }
 
 .AuthUserBox td {
     font-size: 18px;
-    border-bottom: gray dashed 1px;
+    border-bottom: none;
 }
 
 
