--- a/src/layouts/MainLayOut.module.css
+++ b/src/layouts/MainLayOut.module.css
@@ -10,8 +10,8 @@
     background-color: white;
     border: 1px solid #ddd;
     padding: 20px;
-    height: 300px;
-    width: 700px;
+    height: 400px;
+    max-width: 700px;
 }
 
 
