--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -42,6 +42,16 @@ h1 {
     cursor: pointer;
 }
 
+.addPartnerButton {
+    background-color: white !important;
+    margin-left: 7px;
+    margin-top: 7px;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+
 button {
     border-radius: 6px;
     border: none ;
