#13 프로필 사진 업데이트/회원정보 불러오기

--- a/src/pages/mypage/mymain.css
+++ b/src/pages/mypage/mymain.css
@@ -59,7 +59,8 @@ section {
     height: 768px;
     padding: 12px;
     border-right : #000;
-    box-sizing: border-box
+    box-sizing: border-box;
+    /* margin-top: 10px; */
 }
 
 .apv-navibox-top{
