--- a/src/pages/mypage/mypage.css
+++ b/src/pages/mypage/mypage.css
@@ -3,22 +3,18 @@ body {
   }
   
   /* 회원가입 CSS*/
-  .profile-form {
-    width: 900px;
+  .bscd-form {
+    width: 400px;
     background-color: #10479A;
-    margin-left: 50px;
+    margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
+    margin-top: 40px;
     margin-bottom: 180px;
     border-radius: 5px;
     padding: 30px;
-    height: 780px;
-    /* display: flex; */
-    /* 프로필사진 칸 가운데 */
-
   }
   
-  .profile-form h3 {
+  .bscd-form h3 {
     color: white;
     font-size: 13px;
   }
@@ -100,8 +96,51 @@ body {
     color: white;
     font-size: 14px;
   }
-
   
+  #email_id {
+    font-size: 14px;
+    width: 110px;
+    border: none;
+    border-radius: 5px;
+    padding: 15px 10px;
+    margin-right: 10px;
+  }
+  
+  #email_domain {
+    font-size: 14px;
+    width: 100px;
+    border: none;
+    border-radius: 5px;
+    padding: 15px 10px;
+    margin: 0 10px;
+  }
+  
+  .email-form select {
+    width: 100px;
+    font-size: 14px;
+    background: #fff
+      url(https://static.nid.naver.com/images/join/pc/sel_arr_2x.gif) 100% 50%
+      no-repeat;
+    background-size: 20px 8px;
+    -webkit-appearance: none;
+    text-align: start;
+    border: none;
+    border-radius: 5px;
+    padding: 15px 10px;
+    cursor: default;
+    margin: 0;
+    font-family: Dotum, "돋움", Helvetica, sans-serif;
+  }
+  
+  #user_self {
+    font-size: 14px;
+    width: 380px;
+    border: none;
+    border-radius: 5px;
+    padding: 15px 10px;
+    margin-bottom: 10px;
+  }
+
   .addressbutton{
     font-size: 14px;
     background-color:rgba(226, 219, 219, 0.957);
@@ -113,20 +152,25 @@ body {
 
   }
   
-
-  .block-test{
-    display: inline-block;
-    width: 150px;
-    height: 150px;
-    background-color: white;
+  .submit-btn {
+    font-size: 14px;
+    background-color: #FFC338;
+    color: white;
+    width: 100%;
+    border-radius: 5px;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: none;
   }
-
-  .double {
-    display: flex;
-    height: 1000px;
+  
+  .reset-btn {
+    font-size: 14px;
+    background-color: #FFC338;
+    color: white;
+    width: 100%;
+    border-radius: 5px;
+    margin-top: 5px;
+    padding: 10px;
+    border: none;
   }
-
-  .content2{
-    margin-left: 60px;
-  }
-
