--- a/src/pages/bulletin/Bullentin.module.css
+++ b/src/pages/bulletin/Bullentin.module.css
@@ -30,6 +30,9 @@
   width: 20px;
 
 }
+.content_time{
+  font-size: 14px;
+}
 .comment{
   margin-top: 10px;
   margin-bottom: 10px;
@@ -281,20 +284,16 @@ td{
     border: 1px solid #000;
 
   }
-  /* .step_1_content ul li:hover{
-    background: #00b6c2;
-    color: white;
+  .step_1_content ul li:hover{
     cursor: pointer;
-  } */
+  }
   .step_2{
     margin-left: 30px;
     margin-right: 30px;
   }
-  /* .step_2 ul li:hover{
-    background: #00b6c2;
-    color: white;
+  .step_2 ul li:hover{
     cursor: pointer;
-  } */
+  }
   .step_3{
     min-width: 400px;
   }
@@ -367,9 +366,10 @@ ul{
   width: 30%;
   margin: 70px;
   height: 300px;
-  margin-top: 150px;
+  margin-top: 100px;
   border-radius: 6%;
   text-align: center;
+  margin-left: 0px;
 }
 #reservation-status h3{
   border-bottom: 1px solid #000;
