--- a/src/pages/reservation/ReservationNavStyle.css
+++ b/src/pages/reservation/ReservationNavStyle.css
@@ -29,7 +29,7 @@ section {
 .leftmenu2{
     min-height: 1000px;
     height: 100vh;
-    border-color: #000;
+    border-color: #e2e2e2;
     border-right-style: solid;
     border-bottom-style: solid;
     border-right-width: 1px;
