--- a/src/pages/pm/pm-member.css
+++ b/src/pages/pm/pm-member.css
@@ -765,11 +765,12 @@ font-size: 16px;
     height: 36px;
 }
 
-.mainTitle{
+.pm-mainTitle{
     color: #000;
     text-align: center;
     font-size: 40px;
     margin-bottom: 60px;
+    margin-top: 30px;
 }
 
 .apvNaviBox{
@@ -1236,4 +1237,10 @@ display: flex;
     height: 178px;
     /* border-top: 1px solid black; */
     /* border-bottom: 1px solid black; */
+}
+
+
+.selectButton {
+    width: 150px;
+    height: 30px;
 }
