#3 결재선에 없는 사원은 기안 조회 불가

--- a/src/pages/approval/Approval.css
+++ b/src/pages/approval/Approval.css
@@ -563,7 +563,7 @@ section {
 
 .apvLineTreeContainer {
     display: flex;
-    
+
 }
 
 .apvLineTree1 {
@@ -582,22 +582,25 @@ section {
     text-align: center;
     align-items: center
 }
-.apvLineTreeBoxTitle{
+
+.apvLineTreeBoxTitle {
     margin-top: 10px;
 }
-.apvLineTreeSelected{
+
+.apvLineTreeSelected {
     display: flex;
     margin: 10px;
     height: 50px;
     cursor: pointer;
     transition: background-color 0.1s ease-in-out;
 }
+
 /* .apvLineTreeSelected2:hover,
 .apvLineTreeSelected2.active {
     background-color: #FFC338; */
 /* } */
 
-.apvLineTreeSelected1{
+.apvLineTreeSelected1 {
     display: flex;
     width: 100px;
     margin-right: 10px;
@@ -606,7 +609,8 @@ section {
     justify-content: center;
     align-items: center
 }
-.apvLineTreeSelected2{
+
+.apvLineTreeSelected2 {
     display: flex;
     width: 150px;
     margin-right: 10px;
@@ -628,7 +632,7 @@ section {
     border-radius: 6px;
 }
 
-.apvBtn1{
+.apvBtn1 {
     position: relative;
     width: 5px;
     height: 5px;
@@ -639,7 +643,7 @@ section {
     border-radius: 6px;
 }
 
-.apvBtn2{
+.apvBtn2 {
     position: relative;
     width: 60px;
     height: 40px;
@@ -649,7 +653,7 @@ section {
     border-radius: 6px;
 }
 
-.apvBtn3{
+.apvBtn3 {
     position: relative;
     width: 80px;
     height: 40px;
@@ -732,8 +736,13 @@ section {
     background-color: #FFC338;
 }
 
-.fileList{
-display: flex;
+.fileList {
+    display: flex;
+}
+
+.apvNoUser {
+    font-size: 50px;
+    display: flex;
 }
 
 footer {
