#6, #19 회원접속로그 출력, api 요청 unhandledrejection  event 핸들러 처리, 매니저 권한 등록, 수정 관리

--- a/src/pages/admin/AdminPage.module.css
+++ b/src/pages/admin/AdminPage.module.css
@@ -10,8 +10,17 @@
     background-color: white;
     border: 1px solid #ddd;
     padding: 20px;
-    height: 300px;
-    width: 800px;
+    max-height: 500px;
+    max-width: 1200px;
+    /* overflow: auto; */
+
+}
+
+.innerbox {
+    overflow: auto;
+    min-height: 200px;
+    max-height: 400px;
+    max-width: 1100px;
 }
 
 
