--- a/src/components/commons/Header.module.css
+++ b/src/components/commons/Header.module.css
@@ -46,6 +46,10 @@ body {
     margin-left: 80px;
 }
 
+.LogoBtn:hover {
+    background-color: rgba(255, 255, 255, 0) !important;
+}
+
 .HeaderBtn{
     padding: 0;
     border: none;
