--- a/src/pages/mypage/myannual.css
+++ b/src/pages/mypage/myannual.css
@@ -1,66 +1,135 @@
-.pm-ma-top{
-    display: flex;
-    width: 1600px;
-    height: 200px;
-    margin-top: 80px;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+.title{
 
+    /* text-align: justify; */
+    margin-right: 500px;
+    padding: 20px;
 }
 
-.div3{
-    margin-left: 20px;
-}
 
-.pm-ma-box2{
-    width: 200px;
-    height: 200px;
-    /* line-height: 130px; */
-    
-}
-
-.pm-ma-font{
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
-    margin-top: 80px;
-}
-
-.pm-ma-number{
-    width: 20px;
-    height: 20px;
-    margin-top: 5px;
-    margin-left: 85px;
-}
-
-.div4{
-    display: table-column;
-}
-
-.pm-ma-box{
-    width: 200px;
-    height: 100px;
-    text-align: center;
-    margin-top: 80px;
-    /* line-height: 130px; */
-}
-
-.pm-line {
-    border-left : 1px solid #10479A;
-    height : 150px;
-    margin-top: 20px;
-}
-
-.pm-ma-table{
+.task-table {
+    /* background-color: white; */
     border-collapse: collapse;
-    margin: 30px;
-    /* 마진 고쳐보기 테이블 사이 간격 많아 */
-    width: 1400px;
-    height: auto;
-    border: #7B7B7B solid 1px;
+    width: 1520px;
+    margin-top: 20px;
+    margin-left: 80px;
+}
+
+.task-table th, .task-table td {
+    background-color: white;
+    border: 1px solid #ddd;
+    padding: 20px;
+    text-align: auto;
+}
+
+.task-table th  {
+    background-color: lightgray;
+    font-weight: bold;
+}
+
+
+/* 달력, 토글 아웃라인  */
+.input1, .categorystate, .workinput {
+    border: none;
+    outline: none;
     text-align: center;
 
-font-size: 16px;
 }
+
+/*페이징*/
+.pagingmypageAnn{
+    display: flex;
+    /* position: fixed; */
+    bottom: 320px;
+    left: 50%;
+    /* transform: translateX(-50%); */
+    justify-content: center;
+    margin-left: 150px;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.pagingmypageAnn>span{
+    width: 34px;
+    height: 34px;
+    color: #FFF;
+    background: #10479A;
+    text-align: center;
+    font-size: 24px;
+    text-align: center;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.pagingmypageAnn>span:hover{
+    color: #000;
+    background: #FFC338;
+}
+.pagingmypageAnn > .pagingBtn.active {
+    color: #000;
+    background: #FFC338; 
+}
+
+
+
+
+/* 연차 개수 */
+.apvMainBoxRight {
+    display: flex;
+    flex-direction: column;
+    margin: 30px 10px;
+    border-radius: 6px;
+    border: 4px solid #10479A;
+    width: 200px;
+    height: 140px;
+    padding: 10px 12px;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.apvMainBoxRight .row1 {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 80px;
+    width: 200px;
+    font-size: 24px;
+    font-weight: 500;
+    /* border-bottom: 2px solid #10479A; */
+}
+
+.apvMainBoxRight .row2 {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100px;
+    width: 200px;
+    font-size: 24px;
+}
+
+.annRow {
+    margin: 5px;
+    font-size: 28px;
+    font-weight: bold;
+
+}
+
+.apvMainBox {
+
+    margin-left: 170px;
+    margin-bottom: 100px;
+
+}
+
+.apvMainBoxRightBox {
+   
+    margin:120px
+}
+
+
+
 
 
