채팅 host, partner 요청 주소 안맞는 문제 해결

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -55,7 +55,7 @@ h1 {
 
 .toolbar-button {
     background-color: white !important;
-    color: #007aff ;
+    color: #cbddff ;
     font-size: 28px;
     transition: all 0.1s;
   }
