--- a/src/pages/chatting/ChatRoomToolBar.css
+++ b/src/pages/chatting/ChatRoomToolBar.css
@@ -1,7 +1,7 @@
 .toolbar {
     display: flex;
     align-items: center;
-  
+    height: 70px;
     background-color: white;
     font-weight: 500;
     border-bottom: 1px solid #eeeef1;
