--- a/src/pages/pm/pm-member.css
+++ b/src/pages/pm/pm-member.css
@@ -255,8 +255,9 @@ font-size: 16px;
     display: flex;
     width: 1400px;
     height: 230px;
-    margin: 100px 0px 30px 80px;
-    border: 1px solid black;
+    margin: 60px 0px 30px 80px;
+    border: 5px solid rgb(199, 197, 197);
+    border-radius: 6px;
 }
 
 .pm-job-table{
@@ -290,7 +291,7 @@ font-size: 16px;
     width: 300px;
     height: 230px;
     flex-direction: column;
-    border-right: 1px solid black;
+    border-right: 5px solid rgb(199, 197, 197);
 }
 
 .pm-workin-box2{
@@ -300,7 +301,7 @@ font-size: 16px;
     width: 450px;
     height: 230px;
     flex-direction: column;
-    border-right: 1px solid black;
+    border-right: 5px solid rgb(199, 197, 197);
 }
 
 .pm-workin-box-last{
@@ -334,9 +335,34 @@ font-size: 16px;
     /* outline: none;  */
 }
 
+.pm-work-button2{
+    margin: 20px 50px 10px 30px;
+    width: 200px;
+    height: 50px;
+    border-radius: 6px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    background-color:#10479A; 
+    border-color: #10479A; 
+    border-style: none
+    /* box-shadow: 0px 0px 0px 0px; */
+    /* border: 0;  */
+    /* outline: none;  */
+}
+.pmmainbox:hover{
+
+    background-color:  rgb(199, 199, 199);
+
+}
 .pm-work-button:hover{
     background-color: #FFC338;
 }
+
+.pm-work-button2:hover{
+    background-color: #FFC338;
+}
+
 
 
 
@@ -551,9 +577,15 @@ font-size: 16px;
     width: 1600px;
     height: 200px;
     margin-top: 80px;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+    border-top: 5px solid rgb(153, 151, 151);
+    border-bottom: 5px solid rgb(153, 151, 151);
 
+}
+.pm-ma-plus{
+    display: flex;
+    margin-left: 200px;
+    border-right: 5px solid rgb(153, 151, 151);
+    border-left: 5px solid rgb(153, 151, 151);
 }
 
 .pm-ma-table{
@@ -1279,18 +1311,49 @@ display: flex;
 
 .pmmainbox{
     margin: 70px;
-    width: 330px;
-    height: 300px;
-    border: 2.5px solid #10479A;
+    width: 230px;
+    height: 200px;
+    border: 5px solid rgb(153, 151, 151);
     border-radius: 6px;
+}
+
+.pmmainbox2{
+    display: flex;
+    margin: 70px;
+    width: 330px;
+    height: 200px;
+    border: 2.5px solid rgb(153, 151, 151);
+    border-radius: 6px;
+}
+
+.pmline{
+    display: flex;
+    margin: 20px 0px 0px 0px;
+    width: 1200px;
+    height: 500px;
+    border-top: 1px solid black; 
+    border-bottom: 1px solid black;
+}
+
+.pmtopline{
+    margin: 20px 0px 0px 0px;
+    width: 1200px;
+    height: 100px;
+    border-top: 1px solid black; 
+    border-bottom: 1px solid black;
 }
 
 .pmmainbox-font{
     text-align: center;
     color: #000;
     padding: 70px;
+    font-size: 20px;
 }
 
 .marginbox {
     margin-bottom: 650px;
+}
+
+.pmdisplay{
+    display: flex;
 }
