--- a/src/pages/chatting/ConversationListItem.css
+++ b/src/pages/chatting/ConversationListItem.css
@@ -5,6 +5,11 @@
   width: 350px;
 }
 
+
+.ChattingRoomList_chattingRoomLists__H5vq7 {
+  flex-direction: row-reverse;
+}
+
 .ChattingRoomList_chattingRoomInfo__4uP3t {
   display: flex;
   height: 85px;
@@ -15,6 +20,12 @@
   flex-direction: column;
 }
 
+/* .conversation-list-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    width: 350px;
+  } */
 .conversation-list-item {
     display: flex;
     align-items: center;
@@ -41,12 +52,17 @@
     text-transform: capitalize;
     margin: 0;
     color: black;
+    padding-left: 15px;
+    padding-bottom: 5px;
+    text-align: left;
   }
   
   .conversation-snippet {
     font-size: 14px;
     color: #888;
     margin: 0;
+    text-align: left;
+    padding-left: 15px;
   }
   
   .ChattingRoomList_profileIcon__6EIgj {
