--- a/src/pages/chatting/SendMessageArea.css
+++ b/src/pages/chatting/SendMessageArea.css
@@ -1,15 +1,16 @@
 .sendMessageArea {
     display: flex;
     padding: 8px; 
-    background-color: #cbddff; 
+    background-color: #cbddff;
+    height: 89px; 
   }
 
 .send-input {
-    flex-grow: 1; /* 입력창이 가능한 최대 너비를 확보합니다. */
-    border: none; /* 테두리 없음 */
-    outline: none; /* 포커스 효과 제거 */
-    padding: 10px; /* 원하는 패딩 값으로 조절하세요. */
-    font-size: 14px; /* 원하는 글꼴 크기로 조절하세요. */
-    border-radius: 4px; /* 원하는 모양으로 조절하세요. */
-    background-color: #fff; /* 원하는 배경색으로 조절하세요. */
+    flex-grow: 1; 
+    border: none; 
+    outline: none; 
+    padding: 10px; 
+    font-size: 14px;
+    border-radius: 4px;
+    background-color: #fff; 
   }
