--- a/src/pages/pm/pm-member.css
+++ b/src/pages/pm/pm-member.css
@@ -465,7 +465,16 @@ font-size: 16px;
     background-color: #10479A;
     color: white;
     text-align: center;
-    margin-left: 1380px;
+    margin-left: 1200px;
+}
+.pm-de-adds{
+    width: 150px;
+    height: 40px;
+    border-radius: 6px;
+    background-color: #10479A;
+    color: white;
+    text-align: center;
+    margin-left: 20px;
 }
 
 .pm-de-add:hover{
