--- a/src/pages/approval/Approval.css
+++ b/src/pages/approval/Approval.css
@@ -708,7 +708,7 @@ section {
     font-size: 24px;
     width: 100%;
     height: auto;
-    min-height: 50px;
+    min-height: 200px;
     border: none;
     outline: none;
     resize: none;
@@ -738,6 +738,7 @@ section {
     resize: none;
     padding-left: 30px;
     margin-right: 30px;
+    min-width: 1000px;
 }
 
 .option1{
