--- a/src/pages/mypage/myannual.css
+++ b/src/pages/mypage/myannual.css
@@ -75,7 +75,7 @@
 
 
 /* 연차 개수 */
-.apvMainBoxRight {
+.myMainBoxRight {
     display: flex;
     flex-direction: column;
     margin: 30px 10px;
@@ -88,7 +88,7 @@
     align-items: flex-start;
 }
 
-.apvMainBoxRight .row1 {
+.myMainBoxRight .row1 {
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -100,7 +100,7 @@
     /* border-bottom: 2px solid #10479A; */
 }
 
-.apvMainBoxRight .row2 {
+.myMainBoxRight .row2 {
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -117,10 +117,11 @@
 
 }
 
-.apvMainBox {
+.myMainBox {
 
     margin-left: 170px;
     margin-bottom: 100px;
+    display: fl;
 
 }
 
@@ -128,7 +129,6 @@
    
     margin:120px
 }
-
 
 
 
