--- a/src/pages/login/identification.css
+++ b/src/pages/login/identification.css
@@ -101,7 +101,7 @@ div[class*="flex"] {
     font-size: 24px;
 }
 
-@keyframes slideIn {
+/* @keyframes slideIn {
     0%  {
         opacity:50%;
         transform: translateY(-15%);
@@ -110,7 +110,7 @@ div[class*="flex"] {
     opacity: 100%;
     transform: translateY(0%);
     }
-}
+} */
 
 
 .authbox {
