--- a/src/layouts/MainLayOut.module.css
+++ b/src/layouts/MainLayOut.module.css
@@ -10,7 +10,7 @@
     background-color: white;
     border: 1px solid #ddd;
     padding: 20px;
-    max-width: 1000px;
+    min-width: 400px;
 }
 
 
