--- a/src/layouts/MainLayOut.module.css
+++ b/src/layouts/MainLayOut.module.css
@@ -11,6 +11,7 @@
     border: 1px solid #ddd;
     padding: 20px;
     min-width: 400px;
+    box-shadow: 0cm 0.3cm 0.2cm rgba(147, 145, 163, 0.2);
 }
 
 
