--- a/src/pages/pm/pm-member.css
+++ b/src/pages/pm/pm-member.css
@@ -335,7 +335,8 @@ font-size: 16px;
 }
 
 .pm-workin-box-main{
-    margin-left: 20px;
+    
+    /* margin-left: 10px; */
     display: flex;
     justify-content: center;
     width: 300px;
@@ -348,24 +349,26 @@ font-size: 16px;
     margin-bottom: 30px;
     padding: 5px;
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     width: 300px;
     height: 50px;
-    flex-direction: column;
+    /* flex-direction: ㄱ */
     border-bottom: 5px solid rgb(199, 197, 197);
 }
 .pm-workin-box2-main2{
     margin-left: 10px;
     padding: 5px;
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     width: 300px;
     height: 50px;
-    flex-direction: column;
+    /* flex-direction: column; */
     border-bottom: 5px solid rgb(199, 197, 197);
 }
 
 .margin-main{
+    color:#0267ff;
+
     margin-top: 20px;
     margin-bottom: 30px;
     justify-content: space-around
