--- a/src/pages/mypage/myannual.css
+++ b/src/pages/mypage/myannual.css
@@ -75,7 +75,7 @@
 
 
 /* 연차 개수 */
-.myMainBoxRight {
+.AnnualmyMainBoxRight {
     display: flex;
     flex-direction: column;
     margin: 30px 10px;
@@ -88,7 +88,7 @@
     align-items: flex-start;
 }
 
-.myMainBoxRight .row1 {
+.AnnualmyMainBoxRight .row1 {
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -100,7 +100,7 @@
     /* border-bottom: 2px solid #10479A; */
 }
 
-.myMainBoxRight .row2 {
+.AnnualmyMainBoxRight .row2 {
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -117,15 +117,14 @@
 
 }
 
-.myMainBox {
-
+.AnnualmyMainBox {
     margin-left: 170px;
     margin-bottom: 100px;
     display: fl;
 
 }
 
-.apvMainBoxRightBox {
+.AnnualmyMainBoxRightBox {
    
     margin:120px
 }
